--- a/next/package.json
+++ b/next/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
